Added Player, Enemy, and Fireball object

--- a/Burgeon/Burgeon.vcxproj.filters
+++ b/Burgeon/Burgeon.vcxproj.filters
@@ -26,5 +26,14 @@
     <ClInclude Include="GameWrapper.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Player.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Fireball.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Enemy.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
