Added player functions

--- a/Burgeon/Burgeon.vcxproj
+++ b/Burgeon/Burgeon.vcxproj
@@ -153,6 +153,7 @@
   <ItemGroup>
     <ClCompile Include="GameWrapper.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Player.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Enemy.h" />
