--- a/Burgeon/Burgeon.vcxproj
+++ b/Burgeon/Burgeon.vcxproj
@@ -151,6 +151,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Enemy.cpp" />
     <ClCompile Include="GameWrapper.cpp" />
     <ClCompile Include="Log.cpp" />
     <ClCompile Include="main.cpp" />
