--- a/Burgeon/Burgeon.vcxproj.filters
+++ b/Burgeon/Burgeon.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="Log.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Enemy.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GameWrapper.h">
