--- a/Burgeon/Burgeon.vcxproj.filters
+++ b/Burgeon/Burgeon.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="Enemy.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="heatSeekingEnemy.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GameWrapper.h">
@@ -45,6 +48,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Log.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="heatSeekingEnemy.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
