fized progressive difficulty

--- a/Burgeon/Burgeon.vcxproj.filters
+++ b/Burgeon/Burgeon.vcxproj.filters
@@ -53,6 +53,9 @@
     <ClInclude Include="heatSeekingEnemy.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Score.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Image Include="player.png">
