--- a/Burgeon/Burgeon.vcxproj
+++ b/Burgeon/Burgeon.vcxproj
@@ -165,6 +165,7 @@
     <ClInclude Include="heatSeekingEnemy.h" />
     <ClInclude Include="Log.h" />
     <ClInclude Include="Player.h" />
+    <ClInclude Include="Score.h" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="enemy.png" />
